--- a/SFI_CSSS_Presentation.ipynb
+++ b/SFI_CSSS_Presentation.ipynb
@@ -1,12 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "<img src=\"files/image.png\">"
+    "<img src=\"polarityseries.jpeg\">"
    ]
   },
   {
