--- a/AnalyzeGerMex.ipynb
+++ b/AnalyzeGerMex.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,10 @@
       "2731\n",
       "1404\n",
       "1405\n",
-      "1405\n"
+      "1405\n",
+      "405507\n",
+      "405508\n",
+      "405508\n"
      ]
     }
    ],
@@ -232,7 +235,7 @@
     "    polarity_scores = []\n",
     "    count = 0\n",
     "    for idx, tweet in df_.iterrows():\n",
-    "        vs = analyzer.polarity_scores(tweet['text'])\n",
+    "        vs = analyzer.polarity_scores(str(tweet['text']))\n",
     "        polarity_scores.append(vs)\n",
     "        count = count +1\n",
     "    df_ = pd.concat([df_,pd.DataFrame(polarity_scores)],axis = 1)\n",
@@ -248,13 +251,13 @@
     "USATweets.to_csv(\"USATweetsWithVader.csv\")\n",
     "GBrTweets = calcPolarity(GBrTweets)\n",
     "GBrTweets.to_csv(\"GBrTweetsWithVader.csv\")\n",
-    "#calcPolarity(GerMexTweets)\n",
-    "#GerMexTweets.to_csv(\"GerMexTweetsWithVader.csv\")"
+    "GerMexTweets = calcPolarity(GerMexTweets)\n",
+    "GerMexTweets.to_csv(\"GerMexTweetsWithVader.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,6 +452,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('ReplyTrees.txt', 'w') as f:\n",
+    "    for item in trees:\n",
+    "        f.write(\"%s\\n\" % item)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -460,6 +474,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
