updates to notebook

--- a/AnalyzeGerMex.ipynb
+++ b/AnalyzeGerMex.ipynb
@@ -427,7 +427,10 @@
     "        #print(\"root\")\n",
     "        tree = findParentChildrenEdges(relationship[1])\n",
     "        #print(tree)\n",
-    "        trees.append(tree)"
+    "        trees.append(tree)\n",
+    "with open('ReplyTrees.txt', 'w') as f:\n",
+    "    for item in trees:\n",
+    "        f.write(\"%s\\n\" % item)"
    ]
   },
   {
@@ -455,11 +458,7 @@
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "with open('ReplyTrees.txt', 'w') as f:\n",
-    "    for item in trees:\n",
-    "        f.write(\"%s\\n\" % item)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
